--- a/src/pages/cadastros/acervo/form/form-fields/upload-imagem-capa.module.css
+++ b/src/pages/cadastros/acervo/form/form-fields/upload-imagem-capa.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 20px;
-  width: 100px;
+  width: 110px;
   height: 50px;
 }
 
@@ -18,6 +18,7 @@
   border: 1px dashed #d9d9d9;
   border-radius: 8px;
   cursor: pointer;
+  padding: 5px;
   transition: border-color 0.3s;
 }
 
